@@ -21,6 +21,7 @@
   * Implemented the cssStyle property of M.ListView
   * Implemented the cssStyle property of M.ListItemView
   * Implemented the cssStyle property of M.SearchBarView
+  * Implemented the cssStyle property of M.SelectionListView
 
 ** Version 1.1 - Date 20.04.2012 **
 
